# kb

./: .env  Cargo.toml  Migrant.toml  README.md  docker-compose.yml
migrations/20211023145913_create-tickets/: down.sql  up.sql
src/: error.rs  insert.rs  main.rs  search.rs
