[package]
name = "kupibilet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.4", features = [ "with-chrono-0_4" ] }
postgres-types = { version = "0.2.2", features = [ "derive" ] }
deadpool-postgres = "0.10.0"
dotenv = "0.15.0"
tokio = { version = "1.12", features = [ "full" ] }
hyper = { version = "0.14", features = ["full"] }
chrono = { version = "0.4.9", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
